--- a/WooCommerce/Classes/ViewRelated/ReusableViews/OverlayMessageView.xib
+++ b/WooCommerce/Classes/ViewRelated/ReusableViews/OverlayMessageView.xib
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -36,6 +36,7 @@
                         </button>
                     </subviews>
                     <constraints>
+                        <constraint firstItem="JeL-xN-0dT" firstAttribute="width" relation="lessThanOrEqual" secondItem="2w1-dg-Nr4" secondAttribute="width" multiplier="0.9" id="4jz-mr-Qpg"/>
                         <constraint firstItem="w9L-0o-W8W" firstAttribute="leading" secondItem="2w1-dg-Nr4" secondAttribute="leading" constant="20" id="HPA-Dl-PzX"/>
                         <constraint firstAttribute="trailing" secondItem="3Ng-em-fRz" secondAttribute="trailing" id="Tav-gc-Sxc"/>
                         <constraint firstAttribute="trailing" secondItem="w9L-0o-W8W" secondAttribute="trailing" constant="20" id="fqi-J2-lSY"/>
