--- a/WooCommerce/Classes/ViewRelated/ReusableViews/TableFooterView.xib
+++ b/WooCommerce/Classes/ViewRelated/ReusableViews/TableFooterView.xib
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -25,7 +25,7 @@
                     </constraints>
                 </imageView>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="255" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RGI-pq-sH5">
-                    <rect key="frame" x="20" y="46" width="335" height="20.5"/>
+                    <rect key="frame" x="20" y="46" width="335" height="24"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
@@ -36,6 +36,7 @@
                 <constraint firstItem="qck-6N-xeW" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" constant="20" id="3mL-e7-4IU"/>
                 <constraint firstItem="qck-6N-xeW" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="4mN-2A-P26"/>
                 <constraint firstItem="RGI-pq-sH5" firstAttribute="top" secondItem="qck-6N-xeW" secondAttribute="bottom" constant="2" id="N7c-ii-O7x"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="RGI-pq-sH5" secondAttribute="bottom" constant="20" id="WrQ-Om-baO"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="RGI-pq-sH5" secondAttribute="trailing" constant="20" id="lIo-kI-xxg"/>
                 <constraint firstItem="RGI-pq-sH5" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="20" id="nYW-ya-Vu0"/>
             </constraints>
