--- a/WooCommerce/Classes/ViewRelated/ReusableViews/EmptyListMessageWithActionView.xib
+++ b/WooCommerce/Classes/ViewRelated/ReusableViews/EmptyListMessageWithActionView.xib
@@ -28,8 +28,8 @@
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Lfm-8q-CzH" customClass="BordersView" customModule="WooCommerce" customModuleProvider="target">
                             <rect key="frame" x="0.0" y="44.5" width="375" height="48"/>
                             <subviews>
-                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Mgi-it-aQ1">
-                                    <rect key="frame" x="16" y="14" width="343" height="21"/>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Mgi-it-aQ1">
+                                    <rect key="frame" x="16" y="14" width="343" height="23"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                     <nil key="textColor"/>
                                     <nil key="highlightedColor"/>
