--- a/WooCommerce/Classes/ViewRelated/ReusableViews/EmptyListMessageWithActionView.xib
+++ b/WooCommerce/Classes/ViewRelated/ReusableViews/EmptyListMessageWithActionView.xib
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -17,19 +17,19 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="24" translatesAutoresizingMaskIntoConstraints="NO" id="uQE-ll-SpT">
-                    <rect key="frame" x="0.0" y="135" width="375" height="92.5"/>
+                    <rect key="frame" x="0.0" y="135" width="375" height="94.5"/>
                     <subviews>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ldr-2h-SOT">
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="250" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ldr-2h-SOT">
                             <rect key="frame" x="166.5" y="0.0" width="42" height="20.5"/>
                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                             <nil key="textColor"/>
                             <nil key="highlightedColor"/>
                         </label>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Lfm-8q-CzH" customClass="BordersView" customModule="WooCommerce" customModuleProvider="target">
-                            <rect key="frame" x="0.0" y="44.5" width="375" height="48"/>
+                            <rect key="frame" x="0.0" y="44.5" width="375" height="50"/>
                             <subviews>
-                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Mgi-it-aQ1">
-                                    <rect key="frame" x="16" y="14" width="343" height="21"/>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Mgi-it-aQ1">
+                                    <rect key="frame" x="16" y="14" width="343" height="23"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                     <nil key="textColor"/>
                                     <nil key="highlightedColor"/>
@@ -39,7 +39,6 @@
                             <constraints>
                                 <constraint firstAttribute="trailing" secondItem="Mgi-it-aQ1" secondAttribute="trailing" constant="16" id="fDu-ac-2KI"/>
                                 <constraint firstItem="Mgi-it-aQ1" firstAttribute="top" secondItem="Lfm-8q-CzH" secondAttribute="top" constant="14" id="iZo-y8-TIo"/>
-                                <constraint firstAttribute="height" constant="48" id="jtx-gb-DND"/>
                                 <constraint firstAttribute="bottom" secondItem="Mgi-it-aQ1" secondAttribute="bottom" constant="13" id="ltl-Gt-ebO"/>
                                 <constraint firstItem="Mgi-it-aQ1" firstAttribute="leading" secondItem="Lfm-8q-CzH" secondAttribute="leading" constant="16" id="ubc-Eh-WQT"/>
                             </constraints>
